--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
        <nav>
             <a href="./index.html">WebStudio</a>
-            <ul>
+            <ul class="list">
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
