--- a/portfolio.html
+++ b/portfolio.html
@@ -9,15 +9,15 @@
 <body>
     <header>
         <nav>
-        <a href="./portfolio.html">WebStudio</a>
+        <a class="logo link" href="./portfolio.html">Web<span class="studio">Studio</span></a>
         <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolia</a></li>
-            <li><a href="">Contacts></a></li>
+            <li><a class="link-one link" href="./index.html">Studio</a></li>
+            <li><a class="link-one link" href="portfolio.html">Portfolia</a></li>
+            <li><a class="link-one link" href="">Contacts></a></li>
         </ul>
         </nav>
-        <address>
-            <ul>
+        <address class="adres">
+            <ul class="link">
                 <li><a href="info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
             </ul>
