--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,67 @@
         <h2>All Web Site App Design Marketing</h2>
         <button type="button">All</button>
     </section>
-    
+    <section>
+        <ul>
+            <li>
+                <img src="images/img (4).jpg" alt="purple overlap" width="360" height="420">
+                <p>App</p>
+                <h3>Banking App Interface Concept</h3>
+            </li>
+            <li>
+                <img src="images/img (5).jpg" alt="scanning" width="360" height="420">
+                <p>Marketing</p>
+                <h3>Cashless Payment</h3>
+            </li>
+            <li> 
+                <img src="images/img (6).jpg" alt="Mac and iphone x" width="360" height="420">
+                <p>App</p>
+                <h3>Meditation App</h3>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <ul>
+            <li>
+                <img src="images/img (7).jpg" alt="Driver in car" width="360" height="420">
+                <p>Marketing</p>
+                <h3>Taxi Service</h3>
+            </li>
+            <li>
+                <img src="images/img (8).jpg" alt="Scanning code qr" width="360" height="420">
+                <p>Design</p>
+                <h3>Screen Illustrations</h3>
+            </li>
+            <li> 
+                <img src="images/img (9).jpg" alt="Happy women with orange sweater looking on her phone" width="360" height="420">
+                <p>Marketing</p>
+                <h3>Online Courses</h3>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <ul>
+            <li>
+                <img src="images/img (3).jpg" alt="Catalog" width="360" height="420">
+                <p>design</p>
+                <h3>Instagram Stories Concept</h3>
+            </li>
+            <li>
+                <img src="images/img (1) (1).jpg" alt="Lady with her grosseries" width="360" height="420">
+                <p>Web Site</p>
+                <h3>Organic Food</h3>
+            </li>
+            <li> 
+                <img src="images/img (2) (1).jpg" alt="Adding milk to coffee" width="360" height="420">
+                <p>Web Site</p>
+                <h3>Fresh Coffee</h3>
+            </li>
+        </ul>
+    </section>
 </main>
-
+        <footer>
+            <a href="./index.html">WebStudio</a>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </footer>
+</body>
 </html>
