--- a/portfolio.html
+++ b/portfolio.html
@@ -25,31 +25,38 @@
     </header>
 </body>
 <main>
-    <section>
-        <h2>All Web Site App Design Marketing</h2>
-        <button type="button">All</button>
-    </section>
-    <section>
+    <section class="pierwszasekcja">
+        <h2 class="naglowek1"></h2>
         <ul>
+            <li><button class="przycisk1" type="button">All</button></li>
+            <li><button type="button">Web Site</button></li>
+            <li><button type="button">App</button></li>
+            <li><button type="button">Design</button></li>
+            <li><button type="button">Marketing</button></li>
+        </ul>
+         </section>
+    <section>
+        <ul class="list">
             <li>
                 <img src="images/img (4).jpg" alt="purple overlap" width="360" height="420">
-                <p>App</p>
-                <h3>Banking App Interface Concept</h3>
+                <p class="p1">App</p>
+                <h3 class="naglowek2">Banking App Interface Concept</h3>
             </li>
             <li>
                 <img src="images/img (5).jpg" alt="scanning" width="360" height="420">
-                <p>Marketing</p>
-                <h3>Cashless Payment</h3>
+                <p class="p1">Marketing</p>
+                <h3 class="naglowek2">Cashless Payment</h3>
             </li>
             <li> 
                 <img src="images/img (6).jpg" alt="Mac and iphone x" width="360" height="420">
-                <p>App</p>
-                <h3>Meditation App</h3>
+                <p class="p1">App</p>
+                <h3 class="naglowek2">Meditation App</h3>
             </li>
         </ul>
     </section>
     <section>
-        <ul>
+        <h3 class="naglowek3"></h3>
+        <ul class="list">
             <li>
                 <img src="images/img (7).jpg" alt="Driver in car" width="360" height="420">
                 <p>Marketing</p>
