--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-        <a class="logo link" href="./portfolio.html">Web<span class="studio">Studio</span></a>
+        <a class="logo" href="./portfolio.html">Web<span class="studio">Studio</span></a>
         <ul>
             <li><a class="link-one link" href="./index.html">Studio</a></li>
             <li><a class="link-one link" href="portfolio.html">Portfolia</a></li>
@@ -94,9 +94,9 @@
         </ul>
     </section>
 </main>
-        <footer>
-            <a href="./index.html">WebStudio</a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <footer class="klasaf">
+            <a class="fklasa" href="./index.html">Web <span class="klasaspan">Studio</span></a>
+            <p class="logo2">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
 </body>
 </html>
