--- a/portfolio.html
+++ b/portfolio.html
@@ -9,13 +9,13 @@
 <body>
     <header>
         <nav>
-        <a class="logo" href="./portfolio.html">Web<span class="studio">Studio</span></a>
-        <ul>
-            <li><a class="link-one link" href="./index.html">Studio</a></li>
-            <li><a class="link-one link" href="portfolio.html">Portfolia</a></li>
-            <li><a class="link-one link" href="">Contacts></a></li>
-        </ul>
-        </nav>
+            <a  href="./index.html"> Web <span >Studio</span></a>
+            <ul class="list">
+                <li><a href="./index.html">Studio</a></li>
+                <li><a  href="./portfolio.html">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
+            </nav>
         <address class="adres">
             <ul class="link">
                 <li><a href="info@devstudio.com">info@devstudio.com</a></li>
