--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html"> Web <span>Studio</span></a>
             <ul class="list">
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
+                <li><a href="./index.html">Studio</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="adres">
+            <ul class="link">
+                <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
