--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
 </head>
-
 <body>
     <header>
         <nav>
@@ -31,9 +30,9 @@
         </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="section11">
+            <h1 class="naglowekhtml">Effective Solutions for Your Business</h1>
+            <button class="przycisk11" type="button">Order Service</button>
         </section>
         <section>
             <h2>section 2</h2>
