--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </ul>
         </section>
         <section>
-            <h2>What are we doing</h2>
+            <h2 class="sekcja3">What are we doing</h2>
             <ul>
                 <li><img src="./images/pierwszy.jpg" alt="monitor" width="360" height="300"></li>
                 <li><img src="./images/drugi.jpg" alt="phone screen" width="360" height="300"></li>
@@ -68,12 +68,12 @@
             </ul>
         </section>
         <section>
-            <h2>Our Team</h2>
+            <h2 class="sekcja4">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/cuban.jpg" alt="Men in elegant t-shirt" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="nagloweksekcja4">Mark Guerrero</h3>
+                    <p class="akapitlista4">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/ford.jpg" alt="smiling men looking into left side" width="264" height="260">
