--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
             <button class="przycisk11" type="button">Order Service</button>
         </section>
         <section>
-            <h2>section 2</h2>
-            <ul>
+            <h2 class="sekcja2">section 2</h2>
+            <ul class="list">
                 <li>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <p class="sekcja2akapit">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                     <h3>Strategy</h3>
                 </li>
                 <li>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <p class="sekcja2akapit">Bring the key message to the brand's audience for the best price within the shortest possible
                         time. </p>
                     <h3>Punctuality</h3>
                 </li>
                 <li>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <p class="sekcja2akapit">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                     <h3>Diligence</h3>
                 </li>
                 <li>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="sekcja2akapit">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                     <h3>Technologies</h3>
                 </li>
