--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <a class="logo" href="./index.html"> Web <span>Studio</span></a>
+            <a class="logo link" href="./index.html"> Web <span>Studio</span></a>
             <ul class="list">
                 <li><a href="./index.html">Studio</a></li>
                 <li><a href="./portfolio.html">Portfolio</a></li>
