--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </address>
     </header>
     <main>
-        <section class="section11">
+        <section class="sectionone">
             <h1 class="naglowekhtml">Effective Solutions for Your Business</h1>
-            <button class="przycisk11" type="button">Order Service</button>
+            <button class="buttonone" type="button">Order Service</button>
         </section>
         <section>
             <h2 class="sekcja2">section 2</h2>
