--- a/index.html
+++ b/index.html
@@ -35,32 +35,32 @@
             <button class="buttonone" type="button">Order Service</button>
         </section>
         <section>
-            <h2 class="sekcja2">section 2</h2>
+            <h2 class="sectiontwo">section 2</h2>
             <ul class="list">
                 <li>
-                    <p class="sekcja2akapit">Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <p class="sectiontwoa">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                     <h3>Strategy</h3>
                 </li>
                 <li>
-                    <p class="sekcja2akapit">Bring the key message to the brand's audience for the best price within the shortest possible
+                    <p class="sectiontwoa">Bring the key message to the brand's audience for the best price within the shortest possible
                         time. </p>
                     <h3>Punctuality</h3>
                 </li>
                 <li>
-                    <p class="sekcja2akapit">Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <p class="sectiontwoa">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                     <h3>Diligence</h3>
                 </li>
                 <li>
-                    <p class="sekcja2akapit">Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="sectiontwoa">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                     <h3>Technologies</h3>
                 </li>
             </ul>
         </section>
         <section>
-            <h2 class="sekcja3">What are we doing</h2>
+            <h2 class="sectionthree">What are we doing</h2>
             <ul>
                 <li><img src="./images/pierwszy.jpg" alt="monitor" width="360" height="300"></li>
                 <li><img src="./images/drugi.jpg" alt="phone screen" width="360" height="300"></li>
@@ -68,12 +68,12 @@
             </ul>
         </section>
         <section>
-            <h2 class="sekcja4">Our Team</h2>
+            <h2 class="sectionfour">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/cuban.jpg" alt="Men in elegant t-shirt" width="264" height="260">
-                    <h3 class="nagloweksekcja4">Mark Guerrero</h3>
-                    <p class="akapitlista4">Product Designer</p>
+                    <h3 class="headersectionfour">Mark Guerrero</h3>
+                    <p class="plistfour">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/ford.jpg" alt="smiling men looking into left side" width="264" height="260">
