--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
         </address>
     </header>
     <main>
-        <section class="pierwszasekcja">
-            <h2 class="naglowek1"></h2>
+        <section class="firstsectionportfolio">
+            <h1 class="headerone"></h1>
             <ul>
                 <li><button class="przycisk1" type="button">All</button></li>
                 <li><button type="button">Web Site</button></li>
@@ -36,9 +36,7 @@
                 <li><button type="button">Design</button></li>
                 <li><button type="button">Marketing</button></li>
             </ul>
-            </section>
-        <section>
-            <ul class="list">
+                <ul class="list">
                 <li>
                     <img src="images/img (4).jpg" alt="purple overlap" width="360" height="420">
                     <p class="p1">App</p>
