--- a/portfolio.html
+++ b/portfolio.html
@@ -40,22 +40,20 @@
                 <li>
                     <img src="images/img (4).jpg" alt="purple overlap" width="360" height="420">
                     <p class="p1">App</p>
-                    <h3 class="naglowek2">Banking App Interface Concept</h3>
+                    <h3 class="headertwo">Banking App Interface Concept</h3>
                 </li>
                 <li>
                     <img src="images/img (5).jpg" alt="scanning" width="360" height="420">
                     <p class="p1">Marketing</p>
-                    <h3 class="naglowek2">Cashless Payment</h3>
+                    <h3 class="headertwo">Cashless Payment</h3>
                 </li>
                 <li> 
                     <img src="images/img (6).jpg" alt="Mac and iphone x" width="360" height="420">
                     <p class="p1">App</p>
-                    <h3 class="naglowek2">Meditation App</h3>
+                    <h3 class="headertwo">Meditation App</h3>
                 </li>
             </ul>
-        </section>
-        <section>
-            <h3 class="naglowek3"></h3>
+            <h3 class="headerthree"></h3>
             <ul class="list">
                 <li>
                     <img src="images/img (7).jpg" alt="Driver in car" width="360" height="420">
@@ -73,8 +71,6 @@
                     <h3>Online Courses</h3>
                 </li>
             </ul>
-        </section>
-        <section>
             <ul>
                 <li>
                     <img src="images/img (3).jpg" alt="Catalog" width="360" height="420">
