--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,10 @@
             <h1 class="headerone"></h1>
             <ul>
                 <li><button class="przycisk1" type="button">All</button></li>
-                <li><button type="button">Web Site</button></li>
-                <li><button type="button">App</button></li>
-                <li><button type="button">Design</button></li>
-                <li><button type="button">Marketing</button></li>
+                <li><button class="przycisk1" type="button">Web Site</button></li>
+                <li><button class="przycisk1" type="button">App</button></li>
+                <li><button class="przycisk1" type="button">Design</button></li>
+                <li><button class="przycisk1" type="button">Marketing</button></li>
             </ul>
                 <ul class="list">
                 <li>
