--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
     <header>
         <nav>
-            <a class="logo" href="./index.html"> Web <span>Studio</span></a>
+            <a class="logo" class="link" href="./index.html"> Web <span class="spanone">Studio</span></a>
             <ul class="list">
-                <li><a href="./index.html">Studio</a></li>
+                <li><a class="firstlink" class="link" href="./index.html">Studio</a></li>
                 <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="adres">
+        <address class="list">
             <ul class="link">
                 <li><a href="info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
@@ -61,13 +61,13 @@
         </section>
         <section>
             <h2 class="sectionthree">What are we doing</h2>
-            <ul>
+            <ul class="list">
                 <li><img src="./images/pierwszy.jpg" alt="monitor" width="360" height="300"></li>
                 <li><img src="./images/drugi.jpg" alt="phone screen" width="360" height="300"></li>
                 <li><img src="./images/trzeci.jpg" alt="phone in hand" width="360" height="300"></li>
             </ul>
         </section>
-        <section>
+        <section class="sectionfourcolor">
             <h2 class="sectionfour">Our Team</h2>
             <ul>
                 <li>
@@ -77,18 +77,18 @@
                 </li>
                 <li>
                     <img src="./images/ford.jpg" alt="smiling men looking into left side" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="headersectionfour">Tom Ford</h3>
+                    <p class="plistfour">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/espaniol.jpg" alt="Smiling Women in a pink sweather" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="headersectionfour">Camila Garcia</h3>
+                    <p class="plistfour">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/ostatni.jpg" alt="Smiling man in a grey t-shirt" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="headersectionfour">Daniel Wilson</h3>
+                    <p class="plistfour">UI Designer</p>
                 </li>
             </ul>
         </section>
