--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <nav>
-            <a class="logo" class="link" href="./index.html"> Web <span class="spanone">Studio</span></a>
+            <a class="logo link" href="./index.html"> Web <span class="spanone">Studio</span></a>
             <ul class="list">
-                <li><a class="firstlink" class="link" href="./index.html">Studio</a></li>
+                <li><a class="firstlink link" href="./index.html">Studio</a></li>
                 <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
@@ -25,7 +25,7 @@
         <address class="list">
             <ul class="link">
                 <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
