--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <a class="logo link" href="./index.html"> Web <span class="spanone">Studio</span></a>
             <ul class="list">
                 <li><a class="firstlink link" href="./index.html">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a class="firstlink link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="firstlink link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="list">
