--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </nav>
         <address class="list">
             <ul class="link">
-                <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="link" href="info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -38,24 +38,24 @@
             <h2 class="sectiontwo">section 2</h2>
             <ul class="list">
                 <li>
+                    <h3>Strategy</h3>
                     <p class="sectiontwoa">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
-                    <h3>Strategy</h3>
                 </li>
                 <li>
+                    <h3>Punctuality</h3>
                     <p class="sectiontwoa">Bring the key message to the brand's audience for the best price within the shortest possible
                         time. </p>
-                    <h3>Punctuality</h3>
                 </li>
                 <li>
+                    <h3>Diligence</h3>
                     <p class="sectiontwoa">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
-                    <h3>Diligence</h3>
                 </li>
                 <li>
+                    <h3>Technologies</h3>
                     <p class="sectiontwoa">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
-                    <h3>Technologies</h3>
                 </li>
             </ul>
         </section>
@@ -69,7 +69,7 @@
         </section>
         <section class="sectionfourcolor">
             <h2 class="sectionfour">Our Team</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/cuban.jpg" alt="Men in elegant t-shirt" width="264" height="260">
                     <h3 class="headersectionfour">Mark Guerrero</h3>
