--- a/portfolio.html
+++ b/portfolio.html
@@ -12,17 +12,17 @@
 <body>
     <header>
         <nav>
-            <a  href="./index.html"> Web <span >Studio</span></a>
+            <a class="logo link" href="./index.html"> Web <span class="spanone">Studio</span></a>
             <ul class="list">
-                <li><a href="./index.html">Studio</a></li>
-                <li><a  href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a class="firstlink link" href="./index.html">Studio</a></li>
+                <li><a class="firstlink link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="firstlink link" href="">Contacts</a></li>
             </ul>
-            </nav>
-        <address class="adres">
+        </nav>
+        <address class="list">
             <ul class="link">
-                <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="link" href="info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -38,50 +38,50 @@
             </ul>
                 <ul class="list">
                 <li>
-                    <img src="images/img (4).jpg" alt="purple overlap" width="360" height="420">
-                    <p class="p1">App</p>
-                    <h3 class="headertwo">Banking App Interface Concept</h3>
+                    <a img src="images/img(4).jpg" alt="purple overlap" width="360" height="420">
+                        <h3 class="headertwo">Banking App Interface Concept</h3>
+                        <p class="p1">App</p></a>
                 </li>
                 <li>
-                    <img src="images/img (5).jpg" alt="scanning" width="360" height="420">
-                    <p class="p1">Marketing</p>
-                    <h3 class="headertwo">Cashless Payment</h3>
+                    <a src="images/img(5).jpg" alt="scanning" width="360" height="420">
+                        <h3 class="headertwo">Cashless Payment</h3>
+                        <p class="p1">Marketing</p></a>
                 </li>
                 <li> 
-                    <img src="images/img (6).jpg" alt="Mac and iphone x" width="360" height="420">
-                    <p class="p1">App</p>
-                    <h3 class="headertwo">Meditation App</h3>
+                    <a img src="images/img(6).jpg" alt="Mac and iphone x" width="360" height="420">
+                        <h3 class="headertwo">Meditation App</h3>
+                        <p class="p1">App</p></a>
                 </li>
             <h3 class="headerthree"></h3>
                 <li>
-                    <img src="images/img (7).jpg" alt="Driver in car" width="360" height="420">
-                    <p>Marketing</p>
-                    <h3>Taxi Service</h3>
+                    <a img src="images/img(7).jpg" alt="Driver in car" width="360" height="420">
+                        <h3>Taxi Service</h3>
+                        <p>Marketing</p></a>
                 </li>
                 <li>
-                    <img src="images/img (8).jpg" alt="Scanning code qr" width="360" height="420">
-                    <p>Design</p>
-                    <h3>Screen Illustrations</h3>
+                    <a img src="images/img(8).jpg" alt="Scanning code qr" width="360" height="420">
+                        <h3>Screen Illustrations</h3>
+                        <p>Design</p></a>
                 </li>
                 <li> 
-                    <img src="images/img (9).jpg" alt="Happy women with orange sweater looking on her phone" width="360" height="420">
-                    <p>Marketing</p>
-                    <h3>Online Courses</h3>
+                    <a img src="images/img(9).jpg" alt="Happy women with orange sweater looking on her phone" width="360" height="420">
+                        <h3>Online Courses</h3>
+                        <p>Marketing</p></a>
                 </li>
                 <li>
-                    <img src="images/img (3).jpg" alt="Catalog" width="360" height="420">
-                    <p>design</p>
-                    <h3>Instagram Stories Concept</h3>
+                    <a img src="images/img(3).jpg" alt="Catalog" width="360" height="420">
+                        <h3>Instagram Stories Concept</h3>
+                        <p>design</p></a>
                 </li>
                 <li>
-                    <img src="images/img (1) (1).jpg" alt="Lady with her grosseries" width="360" height="420">
-                    <p>Web Site</p>
-                    <h3>Organic Food</h3>
+                    <a img src="images/img(1)(1).jpg" alt="Lady with her grosseries" width="360" height="420">
+                        <h3>Organic Food</h3>
+                        <p>Web Site</p></a>
                 </li>
                 <li> 
-                    <img src="images/img (2) (1).jpg" alt="Adding milk to coffee" width="360" height="420">
-                    <p>Web Site</p>
-                    <h3>Fresh Coffee</h3>
+                    <a img src="images/img (2)(1).jpg" alt="Adding milk to coffee" width="360" height="420">
+                        <h3>Fresh Coffee</h3>
+                        <p>Web Site</p></a>
                 </li>
             </ul>
         </section>
