--- a/portfolio.html
+++ b/portfolio.html
@@ -38,50 +38,68 @@
             </ul>
                 <ul class="list">
                 <li>
-                    <a img src="images/img(4).jpg" alt="purple overlap" width="360" height="420">
+                    <a>
+                        <img src="images/img(4).jpg" alt="purple overlap" width="360" height="420">
                         <h3 class="headertwo">Banking App Interface Concept</h3>
-                        <p class="p1">App</p></a>
+                        <p class="p1">App</p>
+                    </a>
                 </li>
                 <li>
-                    <a src="images/img(5).jpg" alt="scanning" width="360" height="420">
+                    <a>
+                        <img src="images/img(5).jpg" alt="scanning" width="360" height="420">
                         <h3 class="headertwo">Cashless Payment</h3>
-                        <p class="p1">Marketing</p></a>
+                        <p class="p1">Marketing</p>
+                    </a>
                 </li>
                 <li> 
-                    <a img src="images/img(6).jpg" alt="Mac and iphone x" width="360" height="420">
+                    <a>
+                        <img src="images/img(6).jpg" alt="Mac and iphone x" width="360" height="420">
                         <h3 class="headertwo">Meditation App</h3>
-                        <p class="p1">App</p></a>
+                        <p class="p1">App</p>
+                    </a>
                 </li>
             <h3 class="headerthree"></h3>
                 <li>
-                    <a img src="images/img(7).jpg" alt="Driver in car" width="360" height="420">
+                    <a>
+                        <img src="images/img(7).jpg" alt="Driver in car" width="360" height="420">
                         <h3>Taxi Service</h3>
-                        <p>Marketing</p></a>
+                        <p>Marketing</p>
+                    </a>
                 </li>
                 <li>
-                    <a img src="images/img(8).jpg" alt="Scanning code qr" width="360" height="420">
+                    <a>
+                        <img src="images/img(8).jpg" alt="Scanning code qr" width="360" height="420">
                         <h3>Screen Illustrations</h3>
-                        <p>Design</p></a>
+                        <p>Design</p>
+                    </a>
                 </li>
                 <li> 
-                    <a img src="images/img(9).jpg" alt="Happy women with orange sweater looking on her phone" width="360" height="420">
+                    <a>
+                        <img src="images/img(9).jpg" alt="Happy women with orange sweater looking on her phone" width="360" height="420">
                         <h3>Online Courses</h3>
-                        <p>Marketing</p></a>
+                        <p>Marketing</p>
+                    </a>
                 </li>
                 <li>
-                    <a img src="images/img(3).jpg" alt="Catalog" width="360" height="420">
+                    <a>
+                        <img src="images/img(3).jpg" alt="Catalog" width="360" height="420">
                         <h3>Instagram Stories Concept</h3>
-                        <p>design</p></a>
+                        <p>design</p>
+                    </a>
                 </li>
                 <li>
-                    <a img src="images/img(1)(1).jpg" alt="Lady with her grosseries" width="360" height="420">
+                    <a>
+                        <img src="images/img(1)(1).jpg" alt="Lady with her grosseries" width="360" height="420">
                         <h3>Organic Food</h3>
-                        <p>Web Site</p></a>
+                        <p>Web Site</p>
+                    </a>
                 </li>
                 <li> 
-                    <a img src="images/img (2)(1).jpg" alt="Adding milk to coffee" width="360" height="420">
+                    <a>
+                    <img src="images/img (2)(1).jpg" alt="Adding milk to coffee" width="360" height="420">
                         <h3>Fresh Coffee</h3>
-                        <p>Web Site</p></a>
+                        <p>Web Site</p>
+                    </a>
                 </li>
             </ul>
         </section>
