--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <li><a class="firstlink link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="list">
-            <ul class="link">
-                <li><a class="link" href="info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="adressclass">
+            <ul>
+                <li><a class="link info" href="info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link info" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -38,7 +38,7 @@
             <h2 class="sectiontwo">section 2</h2>
             <ul class="list">
                 <li>
-                    <h3>Strategy</h3>
+                    <h3 class="headerindex">Strategy</h3>
                     <p class="sectiontwoa">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
@@ -70,26 +70,26 @@
         <section class="sectionfourcolor">
             <h2 class="sectionfour">Our Team</h2>
             <ul class="list">
-                <li>
+                <li class="classli">
                     <img src="./images/cuban.jpg" alt="Men in elegant t-shirt" width="264" height="260">
                     <h3 class="headersectionfour">Mark Guerrero</h3>
                     <p class="plistfour">Product Designer</p>
                 </li>
-                <li>
+                <li class="classli">
                     <img src="./images/ford.jpg" alt="smiling men looking into left side" width="264" height="260">
                     <h3 class="headersectionfour">Tom Ford</h3>
                     <p class="plistfour">Frontend Developer</p>
                 </li>
-                <li>
+                <liclass="classli" >
                     <img src="./images/espaniol.jpg" alt="Smiling Women in a pink sweather" width="264" height="260">
                     <h3 class="headersectionfour">Camila Garcia</h3>
                     <p class="plistfour">Marketing</p>
                 </li>
-                <li>
+                <li class="classli">
                     <img src="./images/ostatni.jpg" alt="Smiling man in a grey t-shirt" width="264" height="260">
                     <h3 class="headersectionfour">Daniel Wilson</h3>
                     <p class="plistfour">UI Designer</p>
-                </li>
+                </li >
             </ul>
         </section>
     </main>
