--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <address class="list">
-            <ul class="link">
+            <ul class="list">
                 <li><a class="link" href="info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
