--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h3 class="headerindex">Punctuality</h3>
                     <p class="sectiontwoa">Bring the key message to the brand's audience for the best price within the shortest possible
                         time. </p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
+                    <h3 class="headerindex">Diligence</h3>
                     <p class="sectiontwoa">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h3 class="headerindex">Technologies</h3>
                     <p class="sectiontwoa">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
