--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a class="firstlink link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="adressclass list">
+        <address class="list adressclass">
             <ul>
                 <li><a class="link info" href="info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="link info" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
