--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <address class="list adressclass">
-            <ul>
+            <ul class="list">
                 <li><a class="link info" href="info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="link info" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
