--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,10 @@
                 <li><a class="firstlink link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="list">
+        <address class="adressclass">
             <ul class="list">
-                <li><a class="link" href="info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="link info" href="info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link info" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
