--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <section class="firstsectionportfolio">
-            <h1 class="headerone"></h1>
+            <h1 class="headerone">naglowek</h1>
             <ul>
                 <li><button class="przycisk1" type="button">All</button></li>
                 <li><button class="przycisk1" type="button">Web Site</button></li>
