--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
     <main>
         <section class="firstsectionportfolio">
             <h1 class="headerone">naglowek</h1>
-            <ul>
+            <ul class="list">
                 <li><button class="przycisk1" type="button">All</button></li>
                 <li><button class="przycisk1" type="button">Web Site</button></li>
                 <li><button class="przycisk1" type="button">App</button></li>
@@ -61,42 +61,42 @@
                 <li>
                     <a class="link">
                         <img src="./images/fourthphoto.jpg" alt="Driver in car" width="360" height="420">
-                        <h2>Taxi Service</h2>
+                        <h2 class="headertwo">Taxi Service</h2>
                         <p>Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/eightphoto.jpg" alt="Scanning code qr" width="360" height="420">
-                        <h2>Screen Illustrations</h2>
+                        <h2 class="headertwo">Screen Illustrations</h2>
                         <p>Design</p>
                     </a>
                 </li>
                 <li> 
                     <a class="link">
                         <img src="./images/ninephoto.jpg" alt="Happy women with orange sweater looking on her phone" width="360" height="420">
-                        <h2>Online Courses</h2>
+                        <h2 class="headertwo">Online Courses</h2>
                         <p>Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/tenphoto.jpg" alt="Catalog" width="360" height="420">
-                        <h2>Instagram Stories Concept</h2>
+                        <h2 class="headertwo">Instagram Stories Concept</h2>
                         <p>design</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/elevenphoto.jpg" alt="Lady with her grosseries" width="360" height="420">
-                        <h2>Organic Food</h2>
+                        <h2 class="headertwo">Organic Food</h2>
                         <p>Web Site</p>
                     </a>
                 </li>
                 <li> 
                     <a class="link">
                     <img src="./images/twelvephoto.jpg" alt="Adding milk to coffee" width="360" height="420">
-                        <h2>Fresh Coffee</h2>
+                        <h2 class="headertwo">Fresh Coffee</h2>
                         <p>Web Site</p>
                     </a>
                 </li>
