--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
                     <a class="link" >
                         <img src="./images/tenphoto.jpg" alt="Catalog" width="360" height="420">
                         <h2 class="headertwo">Instagram Stories Concept</h2>
-                        <p>design</p>
+                        <p>Design</p>
                     </a>
                 </li>
                 <li>
