--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="klasadlaheadera">
+        <div class="kontener container">
+            <nav class="klasanav">
             <a class="logo link" href="./index.html"> Web <span class="spanone">Studio</span></a>
             <ul class="list">
                 <li><a class="firstlink link" href="./index.html">Studio</a></li>
@@ -28,6 +29,7 @@
                 <li><a class="link info" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        </div>
     </header>
     <main>
         <section class="sectionone">
@@ -72,22 +74,22 @@
             <ul class="list">
                 <li class="classli">
                     <img src="./images/cuban.jpg" alt="Men in elegant t-shirt" width="264" height="260">
-                    <h3 class="headersectionfour">Mark Guerrero</h3>
+                    <h3 class="headerindex">Mark Guerrero</h3>
                     <p class="plistfour">Product Designer</p>
                 </li>
                 <li class="classli">
                     <img src="./images/ford.jpg" alt="smiling men looking into left side" width="264" height="260">
-                    <h3 class="headersectionfour">Tom Ford</h3>
+                    <h3 class="headerindex">Tom Ford</h3>
                     <p class="plistfour">Frontend Developer</p>
                 </li>
                 <li class="classli" >
                     <img src="./images/espaniol.jpg" alt="Smiling Women in a pink sweather" width="264" height="260">
-                    <h3 class="headersectionfour">Camila Garcia</h3>
+                    <h3 class="headerindex">Camila Garcia</h3>
                     <p class="plistfour">Marketing</p>
                 </li>
                 <li class="classli">
                     <img src="./images/ostatni.jpg" alt="Smiling man in a grey t-shirt" width="264" height="260">
-                    <h3 class="headersectionfour">Daniel Wilson</h3>
+                    <h3 class="headerindex">Daniel Wilson</h3>
                     <p class="plistfour">UI Designer</p>
                 </li >
             </ul>
