--- a/portfolio.html
+++ b/portfolio.html
@@ -68,35 +68,35 @@
                 <li>
                     <a class="link" >
                         <img src="./images/eightphoto.jpg" alt="Scanning code qr" width="360" height="300">
-                        <h2 class="headertwo">Screen Illustrations</h2>
+                        <h2 class="headerindex">Screen Illustrations</h2>
                         <p class="classp">Design</p>
                     </a>
                 </li>
                 <li> 
                     <a class="link">
                         <img src="./images/ninephoto.jpg" alt="Happy women with orange sweater looking on her phone" width="360" height="300">
-                        <h2 class="headertwo">Online Courses</h2>
+                        <h2 class="headerindex">Online Courses</h2>
                         <p class="classp">Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/tenphoto.jpg" alt="Catalog" width="360" height="300">
-                        <h2 class="headertwo">Instagram Stories Concept</h2>
+                        <h2 class="headerindex">Instagram Stories Concept</h2>
                         <p class="classp">Design</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/elevenphoto.jpg" alt="Lady with her grosseries" width="360" height="300">
-                        <h2 class="headertwo">Organic Food</h2>
+                        <h2 class="headerindex">Organic Food</h2>
                         <p class="classp" >Web Site</p>
                     </a>
                 </li>
                 <li> 
                     <a class="link">
                     <img src="./images/twelvephoto.jpg" alt="Adding milk to coffee" width="360" height="300">
-                        <h2 class="headertwo">Fresh Coffee</h2>
+                        <h2 class="headerindex">Fresh Coffee</h2>
                         <p class="classp">Web Site</p>
                     </a>
                 </li>
