--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
             <ul class="list">
                 <li>
                     <h3 class="headerindex">Strategy</h3>
-                    <p class="sectiontwoa">Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <p class="plistfour">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
                     <h3 class="headerindex">Punctuality</h3>
-                    <p class="sectiontwoa">Bring the key message to the brand's audience for the best price within the shortest possible
+                    <p class="plistfour">Bring the key message to the brand's audience for the best price within the shortest possible
                         time. </p>
                 </li>
                 <li>
                     <h3 class="headerindex">Diligence</h3>
-                    <p class="sectiontwoa">Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <p class="plistfour">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
                     <h3 class="headerindex">Technologies</h3>
-                    <p class="sectiontwoa">Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="plistfour">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
