--- a/portfolio.html
+++ b/portfolio.html
@@ -40,28 +40,28 @@
                 <li>
                     <a class="link">
                         <img src="./images/firstphoto.jpg" alt="purple overlap" width="360" height="300">
-                        <h2 class="headertwo">Banking App Interface Concept</h2>
+                        <h2 class="headerindex">Banking App Interface Concept</h2>
                         <p class="plistfour">App</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" >
                         <img src="./images/secondphoto.jpg" alt="scanning" width="360" height="300">
-                        <h2 class="headertwo">Cashless Payment</h2>
+                        <h2 class="headerindex">Cashless Payment</h2>
                         <p class="plistfour">Marketing</p>
                     </a>
                 </li>
                 <li> 
                     <a class="link"> 
                         <img src="./images/thirdphoto.jpg" alt="Mac and iphone x" width="360" height="300">
-                        <h2 class="headertwo">Meditation App</h2>
+                        <h2 class="headerindex">Meditation App</h2>
                         <p class="plistfour">App</p>
                     </a>
                 </li>
                 <li>
                     <a class="link">
                         <img src="./images/fourthphoto.jpg" alt="Driver in car" width="360" height="300">
-                        <h2 class="headertwo">Taxi Service</h2>
+                        <h2 class="headerindex">Taxi Service</h2>
                         <p class="plistfour">Marketing</p>
                     </a>
                 </li>
